force-app/main/default/objects/hed__Course_Offering_Schedule__c/fields/Eventbrite_Event__c.field-meta.xml
<CustomField>
    <fullName>Eventbrite_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Eventbrite Event that this schedule is a part of.</description>
    <inlineHelpText>The Eventbrite Event that this schedule is a part of.</inlineHelpText>
    <label>Eventbrite Event</label>
    <referenceTo>eb4sf__Eventbrite_Event__c</referenceTo>
    <relationshipLabel>Course Offering Schedules</relationshipLabel>
    <relationshipName>Course_Offering_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>