force-app/main/default/objects/hed__Course_Offering_Schedule__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class</fullName>
                <default>true</default>
                <label>Class</label>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>