force-app/main/default/objects/hed__Course_Offering_Schedule__c/fields/Schedule_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_End__c</fullName>
    <description>When this schedule is no longer in effect.</description>
    <inlineHelpText>When this schedule is no longer in effect.</inlineHelpText>
    <label>Schedule End</label>
    <type>Date</type>
</CustomField>