force-app/main/default/objects/hed__Course_Offering_Schedule__c/fields/Schedule_Reference__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Reference__c</fullName>
    <description>Unique reference - good one would be: 
OfferingReference-Facility-Start-End-Days</description>
    <inlineHelpText>Unique reference - good one would be: 
OfferingReference-Facility-Start-End-Days</inlineHelpText>
    <label>Schedule Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>