force-app/main/default/objects/hed__Course_Offering_Schedule__c/fields/Schedule_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start__c</fullName>
    <description>When this schedule goes into effect.</description>
    <inlineHelpText>When this schedule goes into effect.</inlineHelpText>
    <label>Schedule Start</label>
    <type>Date</type>
</CustomField>